wrote the sign-up api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,4 @@ spring.application.name=my-spring-boot-garden
 spring.datasource.url=jdbc:mysql://localhost:3306/gardening
 spring.datasource.username=root
 spring.datasource.password=$@Getabreak123
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
